--- a/public/en/menopausal-symptoms.html
+++ b/public/en/menopausal-symptoms.html
@@ -2,22 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>Menopause Treatment with TCM | TAI TCM Zurich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR MENOPAUSAL SYMPTOMS</h1>
-    <p>Professional content for MENOPAUSAL SYMPTOMS coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
+    
+    <img src="../img/akupunktur-wechseljahresbeschwerden-zuerich.webp" alt="TCM Menopause Therapy Zurich" class="hero-img">
+
+    <h1>Natural Relief for Menopausal Symptoms – The TCM Approach</h1>
+
+    <h2>1. How does TCM view menopause?</h2>
+    <div class="highlight-box">
+        <p>TCM understands menopause as a natural transition where an imbalance between Yin and Yang occurs—particularly through Kidney-Yin deficiency and Liver-Qi stagnation.</p>
+    </div>
+
+    <h2>2. What are the benefits of acupuncture?</h2>
+    <div class="highlight-box">
+        <p>Acupuncture reduces hot flashes, stabilizes mood, improves sleep, and regulates the autonomic nervous system—entirely without side effects.</p>
+    </div>
+
+    <h2>3. Are herbs a hormone-free alternative?</h2>
+    <div class="highlight-box">
+        <p>Yes. Chinese herbs strengthen Kidney-Yin, calm the mind, cool heat, and support adaptation—individually tailored to your constitution.</p>
+    </div>
+
+    <h2>4. Is TCM a substitute for hormone therapy?</h2>
+    <div class="highlight-box">
+        <p>For functional complaints, yes. Many women prefer to avoid hormonal treatment—TCM offers a gentle and effective alternative with a holistic approach.</p>
+    </div>
+
+    <h2>5. How long does the treatment take?</h2>
+    <div class="highlight-box">
+        <p>Usually 2–3 months or longer. TCM focuses on stability and prevention—alongside acupuncture and herbs, this includes nutritional and lifestyle counseling.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Regain Your Inner Balance</h3>
+        <p>Book your appointment conveniently online via our Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Experts in Holistic Women's Health</p>
     </div>
 </body>
 </html>
