--- a/public/en/burnout.html
+++ b/public/en/burnout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Burn-out-Syndrom behandeln mit TCM | TAI TCM Zürich</title>
+    <title>Burnout Treatment with TCM | TAI TCM Zurich</title>
     <style>
         :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
         body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
@@ -20,47 +20,47 @@
     </style>
 </head>
 <body>
-    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
     
-    <img src="../img/akupunktur-burnout-zuerich.webp" alt="TCM Behandlung bei Burnout in Zürich" class="hero-img">
+    <img src="../img/akupunktur-burnout-zuerich.webp" alt="TCM treatment for Burnout in Zurich" class="hero-img">
 
-    <h1>Burn-out natürlich behandeln – Wege aus der tiefen Erschöpfung</h1>
+    <h1>Natural Relief for Burnout – Overcoming Deep Exhaustion</h1>
 
-    <h2>1. Wie versteht die TCM das Burn-out-Syndrom?</h2>
+    <h2>1. How does TCM understand Burnout Syndrome?</h2>
     <div class="highlight-box">
-        <p>Burn-out ist aus Sicht der TCM eine Erschöpfung von Qi, Blut und Jing (Essenz). Häufige Muster sind Milz-Qi-Schwäche, Leber-Qi-Stagnation und Herz-Blut-Mangel – Ausdruck eines überlasteten Organismus.</p>
+        <p>In TCM, burnout is viewed as an exhaustion of Qi, Blood, and Jing (Essence). Common patterns include Spleen-Qi weakness, Liver-Qi stagnation, and Heart-Blood deficiency—expressing an overloaded organism.</p>
     </div>
 
-    <h2>2. Hilft Akupunktur bei Erschöpfung?</h2>
+    <h2>2. Does acupuncture help with exhaustion?</h2>
     <div class="highlight-box">
-        <p>Ja. Sie reguliert das vegetative Nervensystem, fördert Schlaf, reduziert mentale Unruhe und bringt das Qi wieder in Fluss – ein zentrales Element der Erholung.</p>
+        <p>Yes. It regulates the autonomic nervous system, promotes sleep, reduces mental restlessness, and gets the Qi flowing again—a central element of recovery.</p>
     </div>
 
-    <h2>3. Welche Kräuter helfen?</h2>
+    <h2>3. Which herbs help?</h2>
     <div class="highlight-box">
-        <p>Tonisierende Kräuter stärken Milz, Leber, Herz und Niere – sie bauen auf, beruhigen und regenerieren. Kein Vergleich zu aufputschenden Substanzen, sondern nachhaltige Stärkung.</p>
+        <p>Tonifying herbs strengthen the Spleen, Liver, Heart, and Kidney—they build up, calm, and regenerate. Unlike stimulating substances, they provide sustainable strengthening.</p>
     </div>
 
-    <h2>4. Ist TCM ein Ersatz für Psychotherapie?</h2>
+    <h2>4. Is TCM a substitute for psychotherapy?</h2>
     <div class="highlight-box">
-        <p>Nein, aber eine sehr gute Ergänzung. Die TCM wirkt körperlich regulierend, was emotionale Stabilität fördert – ideal in Kombination mit psychologischer Betreuung.</p>
+        <p>No, but it is a very good supplement. TCM acts in a physically regulating manner, promoting emotional stability—ideal when combined with psychological care.</p>
     </div>
 
-    <h2>5. Wie lange dauert die Erholung?</h2>
+    <h2>5. How long does recovery take?</h2>
     <div class="highlight-box">
-        <p>Zwischen 4 Wochen und mehreren Monaten – je nach Tiefe der Erschöpfung. TCM begleitet Schritt für Schritt, bis Energie und Lebensfreude zurückkehren.</p>
+        <p>Between 4 weeks and several months—depending on the depth of the exhaustion. TCM accompanies you step by step until energy and joy of life return.</p>
     </div>
 
     <div class="cta-section">
-        <h3>Laden Sie Ihre Energiereserven wieder auf</h3>
-        <p>Vereinbaren Sie jetzt Ihren Termin online über unseren Google Calendar.</p>
+        <h3>Recharge Your Energy Reserves</h3>
+        <p>Book your appointment conveniently online via our Google Calendar.</p>
         <br>
-        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
     </div>
 
     <div class="footer-meta">
-        <p>Weitere Informationen: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
-        <p>TAI TCM Zürich | Spezialisten für Burnout-Prävention und Regeneration</p>
+        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Experts in Burnout Prevention and Regeneration</p>
     </div>
 </body>
 </html>
